--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ hw/core-v-mini-mcu/system_xbar.sv
 hw/core-v-mini-mcu/memory_subsystem.sv
 hw/system/x_heep_system.sv
 hw/system/pad_ring.sv
-tb/tb_util.svh
+#tb/tb_util.svh
 hw/ip/power_manager/data/power_manager.hjson
 hw/ip/power_manager/rtl/power_manager.sv
 hw/ip/power_manager/rtl/power_manager_reg_top.sv
@@ -34,7 +34,7 @@ hw/system/pad_control/rtl/pad_control_reg_pkg.sv
 hw/system/pad_control/rtl/pad_control_reg_top.sv
 
 # same for the C header file and linker scripts
-sw/device/lib/runtime/core_v_mini_mcu.h
+#sw/device/lib/runtime/core_v_mini_mcu.h
 sw/linker/link.ld
 sw/linker/link_flash_exec.ld
 sw/linker/link_flash_load.ld
