--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,8 @@ hw/system/pad_control/rtl/pad_control_reg_pkg.sv
 hw/system/pad_control/rtl/pad_control_reg_top.sv
 
 # same for the C header file and linker scripts
-#sw/device/lib/runtime/core_v_mini_mcu.h
-sw/linker/link.ld
+sw/device/lib/runtime/core_v_mini_mcu.h
+#sw/linker/link.ld
 sw/linker/link_flash_exec.ld
 sw/linker/link_flash_load.ld
 sw/device/lib/drivers/power_manager/power_manager_regs.h
