--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ run_verif_rtl_log.txt
 # ignore the following hw automatically generated files
 environment.yml
 core-v-mini-mcu.upf
-tb/tb_util.svh
+#tb/tb_util.svh
 hw/core-v-mini-mcu/include/core_v_mini_mcu_pkg.sv
 hw/core-v-mini-mcu/system_bus.sv
 hw/core-v-mini-mcu/system_xbar.sv
