Testbench testharness for xheep & CB-heep + new CB_heep_ctrl

--- a/sw/CMakeLists.txt
+++ b/sw/CMakeLists.txt
@@ -412,7 +412,7 @@ if((${LINKER} STREQUAL "flash_load") OR (${LINKER} STREQUAL "flash_exec"))
             COMMENT "Invoking: Hexdump")
 else()
     add_custom_command(TARGET ${MAINFILE}.elf POST_BUILD
-            COMMAND ${CMAKE_OBJCOPY} -O verilog  ${MAINFILE}.elf  ${MAINFILE}.hex
+            COMMAND ${CMAKE_OBJCOPY} --adjust-vma=-0xF0100000 -O verilog  ${MAINFILE}.elf  ${MAINFILE}.hex
             COMMENT "Invoking: Hexdump")
 endif()
 
