--- a/sw/build_CB_C0/Makefile
+++ b/sw/build_CB_C0/Makefile
@@ -70,8 +70,8 @@ CMAKE_BINARY_DIR = /home/luis/Documents/PhD/CB-heep/sw/build_CB_C0
 
 # Special rule for the target edit_cache
 edit_cache:
-	@$(CMAKE_COMMAND) -E cmake_echo_color "--switch=$(COLOR)" --cyan "No interactive CMake dialog available..."
-	/home/luis/miniconda3/envs/core-v-mini-mcu/lib/python3.8/site-packages/cmake/data/bin/cmake -E echo No\ interactive\ CMake\ dialog\ available.
+	@$(CMAKE_COMMAND) -E cmake_echo_color "--switch=$(COLOR)" --cyan "Running CMake cache editor..."
+	/tools/Xilinx/Vitis/2023.2/tps/lnx64/cmake-3.3.2/bin/ccmake -S$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
 .PHONY : edit_cache
 
 # Special rule for the target edit_cache
