--- a/tb/core-v-mini-mcu-pynq-z2-bscan.cfg
+++ b/tb/core-v-mini-mcu-pynq-z2-bscan.cfg
@@ -19,11 +19,11 @@ jtag newtap $_CHIPNAME cpu -irlen 6 -expected-id 0x23727093
 jtag newtap arm_dap_0 tap -irlen 4 -expected-id 0x4ba00477
 
 set _TARGETNAME_0 $_CHIPNAME.cpu0
-set _TARGETNAME_1 $_CHIPNAME.cpu1
+#set _TARGETNAME_1 $_CHIPNAME.cpu1
 #set _TARGETNAME_2 $_CHIPNAME.cpu2
 #set _TARGETNAME_3 $_CHIPNAME.cpu3
 target create $_TARGETNAME_0 riscv -chain-position $_CHIPNAME.cpu -coreid 0
-target create $_TARGETNAME_1 riscv -chain-position $_CHIPNAME.cpu -coreid 1
+#target create $_TARGETNAME_1 riscv -chain-position $_CHIPNAME.cpu -coreid 1
 #target create $_TARGETNAME_2 riscv -chain-position $_CHIPNAME.cpu -coreid 2
 #target create $_TARGETNAME_3 riscv -chain-position $_CHIPNAME.cpu -coreid 3
 
